samples/_failures_safe/1761620566_88df75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e03b721f.c: In function ‘main’:
./samples/SAFE/__tmp_e03b721f.c:157:27: error: missing terminating " character
  157 |     int choice = read_int("Enter choice (1-
      |                           ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e03b721f.c:157:5: error: expected expression at end of input
  157 |     int choice = read_int("Enter choice (1-
      |     ^~~
./samples/SAFE/__tmp_e03b721f.c:157:18: error: too few arguments to function ‘read_int’
  157 |     int choice = read_int("Enter choice (1-
      |                  ^~~~~~~~
./samples/SAFE/__tmp_e03b721f.c:20:5: note: declared here
   20 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e03b721f.c:157:5: error: expected declaration or statement at end of input
  157 |     int choice = read_int("Enter choice (1-
      |     ^~~
